--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -6,7 +6,5 @@ spec:
   selector:
     app: myapp
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-  type: ClusterIP
+    - port: 8080
+      targetPort: 8080
