--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,9 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: myapp
+  namespace: default
 spec:
   selector:
     app: myapp
+  type: NodePort            # <-- change here
   ports:
-    - port: 8080
-      targetPort: 8080
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+      nodePort: 30080       # <-- desired port
