--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,13 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: myapp
-  namespace: default
 spec:
+  type: NodePort
   selector:
     app: myapp
-  type: NodePort            # <-- change here
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-      nodePort: 30080       # <-- desired port
+    - port: 8080        # Service port
+      targetPort: 8080  # Flask app port
+      nodePort: 30080   # External port
