--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   name: myapp
 spec:
   replicas: 1
+  revisionHistoryLimit: 2   # 👈 Sirf latest 2 ReplicaSet rakhega
   selector:
     matchLabels:
       app: myapp
